--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1160px;
+    margin: auto;
 }
 header{
     margin: 23px 0;
-    width: 1160px;
+    width: 100%;
     height: 51px;
     background-color: #FFFFFFE5;
     border-radius: 75px;
@@ -46,12 +48,16 @@ header{
 }
 
 main{
-    width: 1160px;
+    width: 100%;
     height: 481px;
 
 }
+
+.slide-mobile{
+    display: none;
+}
 .swiper {
-    width: 1160px;
+    width: 100%;
     height: 481px;
 
     background-color: #FFFFFFE5;
@@ -78,10 +84,34 @@ h1 {
     background-color: #EAF2F5;
     flex-shrink: 0;
 }
+.card img{
+    margin: 50px 100px 146px 100px;
+    width: auto;
+
+    
+}
+.card h2{
+    text-align: center;
+    z-index: 10;
+}
 
 
 #map {
+    width: 100%;
     margin: 60px 0px;
 }
 
+.grid{
+    margin-top: 20px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+
+img{
+    object-fit: fill;
+    width: 100%;
+}
 
